  * Apply upstream patch to allocate vnodes from the malloc pool rather
    than off the stack, fixing file server problems on SPARC.  Thanks to
    Barney Sowood for tracking down the patch.  (Closes: #448380)
  * Apply upstream patch from the 1.5 series to allow multiple realms to
    be listed in the server krb.conf and hence treated as local.
  * Add more debugging and bug reporting instructions to README.Debian.
  * Mention in README.Debian that the server is built with supergroups
    enabled and with the multiple local realm patch.  (Closes: #453399)
  * Update to standards version 3.7.3 (no changes required).

 -- Russ Allbery <rra@debian.org>  Mon, 17 Dec 2007 18:23:26 -0800

openafs (1.4.5.dfsg1-1) unstable; urgency=low

  * New upstream release.
    - Even with a new enough Linux kernel to support keyrings, we still
      may have found the system call table and need to clean it up when
      unloading the module.  (Closes: #448793)
  * Use uname -m rather than dpkg --print-architecture to determine the
    sysname for kernel module builds.  Otherwise, builds with a different
    kernel architecture than userspace (amd64 kernels with i386 userspace,
    for example) don't work.  Thanks, Anders Kaseorg.  (Closes: #448452)
  * Fix signing the generated the changes file on a kernel module build.
    The module build file reorganization required an additional change to
    genchanges.  Thanks, Anders Kaseorg.  (Closes: #448449)
  * Expose prototypes for the ktc_* functions.  (Closes: #449432)
  * Fix man pages for subcommands to use an underscore in the NAME section
    instead of a space so that they'll be indexed properly by the current
    groff and man-db.
  * Update CellServDB to 2007-10-25 GCO release.
  * Add Homepage to the package control fields.

 -- Russ Allbery <rra@debian.org>  Sun, 11 Nov 2007 15:54:59 -0800

openafs (1.4.5~pre2.dfsg1-1) unstable; urgency=low

  * New upstream release candidate.