@@ -45,6 +45,21 @@ Documentation
   secure than the one in the OpenAFS documentation, but the OpenAFS
   documentation provides useful background.
 
+Build Options
+
+  The OpenAFS servers have been built with --enable-supergroups, which
+  permits nesting of PTS groups.  Be aware that the PT database created by
+  these packages is not compatible with servers not built with
+  --enable-supergroups if nested PTS groups are used.  In other words, if
+  you need the openafs-dbserver package to interoperate with ptservers
+  that aren't built with this option, don't use this capability.
+
+  bosserver is built with --enable-bos-new-config.  If
+  /etc/openafs/BosConfig.new exists when bosserver starts, it will be
+  renamed to /etc/openafs/BosConfig before the configuration file is
+  read.  This allows queuing of changes to the configuration that will
+  take effect at the next restart.
+
 Changes Relative to Stock OpenAFS
 
   Long-time AFS users may be confused by the directory layout.  The files
@@ -59,13 +74,6 @@ Changes Relative to Stock OpenAFS
   modules against the same tree.  Doing so does not work on all platforms.
   To distinguish between an SMP and a non-SMP kernel module package, use
   --append_to_version; see README.modules for more information.
-
-  The OpenAFS servers have been built with --enable-supergroups, which
-  permits nesting of PTS groups.  Be aware that the PT database created by
-  these packages is not compatible with servers not built with
-  --enable-supergroups if nested PTS groups are used.  In other words, if
-  you need the openafs-dbserver package to interoperate with ptservers
-  that aren't built with this option, don't use this capability.
 
   The OpenAFS servers have been patched to support listing up to four
   realms in /etc/openafs/server/krb.conf.  Any realms listed in that file
@@ -174,4 +182,4 @@ PAM Authentication
   the openafs-kpasswd package to get the administrative utilities for
   managing those Kerberos accounts.
 
- -- Russ Allbery <rra@debian.org>, Mon, 17 Dec 2007 18:22:35 -0800
+ -- Russ Allbery <rra@debian.org>, Mon, 17 Dec 2007 18:29:42 -0800
